[gd_scene load_steps=10 format=3 uid="uid://yyfq48qtjffh"]

[ext_resource type="Script" path="res://New/object/flammable_object.gd" id="1_3qrd0"]
[ext_resource type="Texture2D" uid="uid://dln0tv5rk8vol" path="res://New/image/Fire2.png" id="2_kwtam"]
[ext_resource type="AudioStream" uid="uid://6tvwqf3cbf2r" path="res://Player/SFX/Flare/SW_Flare_Burning_LOOP_01.wav" id="3_2xrli"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtymq"]
emission_shape = 2
emission_sphere_radius = 3.0
angle_min = 1.07288e-05
angle_max = 529.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 1.99998
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqhb0"]
transparency = 1
albedo_texture = ExtResource("2_kwtam")

[sub_resource type="BoxMesh" id="BoxMesh_qosfe"]
material = SubResource("StandardMaterial3D_nqhb0")
size = Vector3(0, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_8ypab"]

[sub_resource type="BoxMesh" id="BoxMesh_iofra"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i5f0w"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.607843)

[node name="Flammable object" type="Node3D"]
script = ExtResource("1_3qrd0")

[node name="fire" type="GPUParticles3D" parent="."]
transform = Transform3D(0.126015, 0, 0, 0, 0.126015, 0, 0, 0, 0.126015, 0, 0, 0)
emitting = false
amount = 100
lifetime = 0.2
explosiveness = 0.12
randomness = 0.9
process_material = SubResource("ParticleProcessMaterial_rtymq")
draw_pass_1 = SubResource("BoxMesh_qosfe")

[node name="fire2" type="GPUParticles3D" parent="."]
transform = Transform3D(-0.126015, 0, -1.10166e-08, 0, 0.126015, 0, 1.10166e-08, 0, -0.126015, 0, 0, 0)
emitting = false
amount = 100
lifetime = 0.2
explosiveness = 0.12
randomness = 0.9
process_material = SubResource("ParticleProcessMaterial_rtymq")
draw_pass_1 = SubResource("BoxMesh_qosfe")

[node name="fire3" type="GPUParticles3D" parent="."]
transform = Transform3D(0.0431431, 0, 0.1184, 0, 0.126015, 0, -0.1184, 0, 0.0431431, 0, 0, 0)
emitting = false
amount = 100
lifetime = 0.2
explosiveness = 0.12
randomness = 0.9
process_material = SubResource("ParticleProcessMaterial_rtymq")
draw_pass_1 = SubResource("BoxMesh_qosfe")

[node name="fire4" type="GPUParticles3D" parent="."]
transform = Transform3D(-0.0431431, 0, -0.1184, 0, 0.126015, 0, 0.1184, 0, -0.0431431, 0, 0, 0)
emitting = false
amount = 100
lifetime = 0.2
explosiveness = 0.12
randomness = 0.9
process_material = SubResource("ParticleProcessMaterial_rtymq")
draw_pass_1 = SubResource("BoxMesh_qosfe")

[node name="Flaredet" type="Area3D" parent="." groups=["flamable"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Flaredet"]
shape = SubResource("BoxShape3D_8ypab")

[node name="flare_ambience" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_2xrli")
volume_db = -20.513

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_iofra")
surface_material_override/0 = SubResource("StandardMaterial3D_i5f0w")

[connection signal="area_entered" from="Flaredet" to="." method="_on_flaredet_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
